trunk/NewArchive/cdbff5cec41ceac38cd8d8e1997c9ab3-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:1:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:2:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:3:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:4:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:5:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:6:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:7:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:8:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:9:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:10:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:11:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:12:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:13:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:14:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:15:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:16:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:17:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:18:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:19:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:20:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:21:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:22:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:23:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:24:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:25:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:26:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:27:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:28:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:29:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:30:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:31:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:32:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:33:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:34:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:35:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:36:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:37:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:38:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:39:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:40:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:41:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:42:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:43:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:44:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:45:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:46:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:47:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:48:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:49:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:50:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:51:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:52:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:53:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:54:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:55:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
main.cpp:56:4: error: expected constructor, destructor, or type conversion before ‘;’ token
 a();
    ^
